--- a/.env
+++ b/.env
@@ -2,9 +2,11 @@
 SECRET_KEY=your-secret-key-here
 DEBUG=True
 
-# MailerLite Configuration
-MAILERLITE_API_KEY=your-mailerlite-api-key-here
-MAILERLITE_GROUP_ID=your-group-id-here
+# Mailtrap Configuration
+MAILTRAP_USERNAME=your-mailtrap-username-here
+MAILTRAP_PASSWORD=your-mailtrap-password-here
+MAILTRAP_HOST=smtp.mailtrap.io
+MAILTRAP_PORT=2525
 
 # Database
 DATABASE_URL=sqlite:///araiza_inc.db
