--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
-Flask==2.3.3
-Flask-SQLAlchemy==3.0.5
-Flask-WTF==1.1.1
-WTForms==3.0.1
-requests==2.31.0
-python-dotenv==1.0.0
-Werkzeug==2.3.7
-Jinja2==3.1.2
+Flask==3.0.3
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+WTForms==3.1.2
+requests==2.32.3
+python-dotenv==1.0.1
+Werkzeug==3.0.3
+Jinja2==3.1.4
+blinker==1.8.2
+click==8.1.7
+itsdangerous==2.2.0
+MarkupSafe==2.1.5
